[package]
name = "reactify"
version = "0.1.0"
authors = [ "Grégoire Van der Auwermeulen <gregoirevandera@gmail.com>" ]
edition = "2018"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.10"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "EventTarget",
  "EventListener",
  "Text"
]
